--- a/web1/src/app/po/quotation/quotation.component.html
+++ b/web1/src/app/po/quotation/quotation.component.html
@@ -103,7 +103,7 @@
                                                 <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                                 </ngx-mat-select-search>
                                             </mat-option>
-                                            <mat-option *ngFor="let prod of prodList ;  let i = index;" [value]="prod.Name">
+                                            <mat-option *ngFor="let prod of prodList | prodtypenameq: searchValue  let i = index;" [value]="prod.Name">
                                                 {{prod.Name}}
                                             </mat-option>
                                         </mat-select>
@@ -127,10 +127,10 @@
                                                 (selectionChange)="getFieldSupportData(i)" editable="true"
                                                 [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option>
-                                                    <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                    <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue " (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
                                                     </ngx-mat-select-search>
                                                 </mat-option>
-                                                <mat-option *ngFor="let val of spec.SptFilterData "
+                                                <mat-option *ngFor="let val of spec.SptFilterData | productitemfilterq: spec.EnteredValue"
                                                     [value]="val.TableValue">
                                                     {{val.TableValue}}
                                                 </mat-option>
