--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -26,7 +26,7 @@
 
                                     <li class="nav-item d-flex" role="presentation" (click)="specCheck('spec')">
                                         <mat-checkbox class="example-margin ps-1" color="primary"
-                                            [(ngModel)]="Check.SpectacleCheck"
+                                           name="SpectacleCheck" [(ngModel)]="Check.SpectacleCheck"
                                             style="position: absolute;z-index: 9; cursor: pointer;"> </mat-checkbox>
                                         <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab"
                                             href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
