--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -101,6 +101,7 @@
                                 <div
                                     style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;">
                                     <%=i.ProductModelName%>
+                                    <!-- <%=i.ProductFullName%> -->
                                 </div>
                             </div>
                             </th>
