--- a/web1/src/app/sale/bill-list/bill-list.component.css
+++ b/web1/src/app/sale/bill-list/bill-list.component.css
@@ -142,3 +142,12 @@
   color: red !important;
   text-decoration: line-through;
 }
+
+input[type=date] {
+  padding: 0rem !important;
+  height: 1.5rem !important;
+  font-size: 14px;
+  line-height: 1.5 !important;
+  box-sizing: border-box;
+  padding-top: 0px !important;
+}
