--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="http://localhost:3000/assest/purchaseDetails.css">
 <style>
     html body {
-        zoom: 100%;
+        zoom: 90% !important;
     }
 
     .headingName {
@@ -54,7 +54,7 @@
         </div>
     </section>
  
-    <section>
+    <section style="zoom:140%">
         <table>
             <thead>
                 <tr>
