--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -3,6 +3,16 @@
     color: #ff5100;
 }
 
+
+input[type=date] {
+    padding: 0rem !important;
+    height: 1rem !important;
+    font-size: 14px;
+    line-height: 1.5 !important;
+    box-sizing: border-box;
+    padding-top: 16px !important;
+  }
+
 .card {
     padding-left: 5px;
     padding-right: 5px;
